@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-20T00:41:13Z",
+  "timestamp" : "2022-10-25T08:16:19Z",
   "count_outdated" : 648,
   "uniques_outdated" : 134,
-  "count" : 653,
-  "uniques" : 138,
+  "count" : 654,
+  "uniques" : 139,
   "views" : [
     {
       "timestamp": "2022-10-12T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-10-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
