@@ -1,3 +1,11 @@
+2022-10-25T08:16:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3319251975 # 967
+* notice: last 14d: unq all: 5 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 134 648 / 138 653
+* notice: next accum: outdated-unq outdated-all / unq all: 134 648 / 139 654
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-25]
+
 2022-10-20T00:41:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3285999525 # 951
 * notice: last 14d: unq all: 4 5
